# vigie

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  POINT.D.md  POINT.md  README.md  SECURITY.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  sandbox_channels.json  start.py  worklog.md
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: __init__.py  audit.py  health.py  main.py  orchestrator.py  progress.py  reminders.py  scheduler.py  state.py  tone.py  workflows.py
app/blocks/: __init__.py  canvas.py  checkin.py  dashboard.py  escalation.py  modals.py  quick_checkin.py  reports.py
app/handlers/: __init__.py  actions.py  commands.py  events.py  views.py
app/services/: __init__.py  mcp_client.py  rts.py  slack_ai.py  snapshot.py  vlm.py  zai_llm.py
app/utils/: __init__.py  config.py  http_retry.py  logging.py  slack_helpers.py
docs/: SETUP.md  VLM.md  architecture-diagram.md  architecture.md  devpost-submission.md  video-script.md
hackathon-assets/: README.md  devpost_complete_content.md  devpost_project_story.md
manifest/: app-manifest.json  app-manifest.yaml
mcp_server/: __init__.py  server.py
mcp_server/data/: beneficiaries.json  scenario_canicule_juillet.json  sectors.json  volunteers.json
mcp_server/resources/: __init__.py  beneficiary_registry.py  community_pois.py  weather_alerts.py
mcp_server/tools/: __init__.py  (+3 more)
scripts/: __init__.py  capture_video.py  clean_markers.py  generate_audio.py  generate_beneficiaries.py  generate_volunteers.py  seed_sandbox.py  simulate_canicule.py  validate_manifest.py  validate_manifest_remote.py  vigie_gallery_1_slack.html  vigie_gallery_2_architecture.html  vigie_gallery_3_classification.html  vigie_gallery_4_vlm.html  vigie_mock.html  vigie_thumbnail.html  vigie_video.html  vlm_build_report.py  vlm_stress_daemon.py  vlm_stress_report.md  vlm_stress_run1.json  vlm_stress_run1.jsonl  vlm_stress_run2.json  vlm_stress_test.py  vlm_stress_test.ts  vlm_wait_for_reset.sh
tests/: conftest.py  test_assign_checkin.py  test_audit.py  test_blocks.py  test_classify_anomaly.py  test_escalate.py  test_mcp_http_integration.py  test_mcp_server.py  test_orchestrator.py  test_rts.py  test_scheduler.py  test_slack_ai.py  test_slack_helpers.py  test_state.py  test_vlm.py  test_vlm_audit.py  test_vlm_cache.py
tonton/: 00-synthese-comparative-finale.md  filiere-1-new-slack-agent.md  filiere-2-agent-for-good.md  filiere-3-agent-for-organizations.md
tool-results/: bash_1782954741031_ee86fe3dc3f4.txt  bash_1782959836669_514205ea4b58.txt  read_1782947821671_589a2d72b62c.txt  read_1782947825369_ea17a9333aee.txt  read_1782947827771_1b6085525fea.txt  read_1782947832907_b786e2d3ec47.txt  read_1782948825835_a6108c17f6e9.txt  read_1783015524625_785271045b26.txt  read_1783015542308_8f95d2aa7722.txt  read_1783709543156_8cd2615ba6de.txt  read_1783709543638_2eb1fa65dd48.txt  read_1783709547864_0e99d453a00a.txt
upload/: APPLE_STYLE_VIDEO_PROMPT_v3.md  Pasted Content_1783709507741.txt
vigie/: .pre-commit-config.yaml  LICENSE  Makefile  start.py
(+31 files in other folders)
